<?xml version="1.0" encoding="utf-8"?>
    <!-- default (english) -->
<resources>

    <!-- Facebook ids -->
    <!-- Id generated on Alexandru Dascalu -->
    <string name="app_id" translatable="false">294525710751213</string>
    <!-- Id generated on helpmeradar@gmail.com -->
    <string name="app_id_2" translatable="false" >374289656057882</string>
    <!-- Text displayed on settings menu button -->

    <!-- The name of tha application -->
    <string name="app_name">Help Me radar</string>

    <string name="action_settings">Settings</string>
    <string name="text_btn_type_new_contact">Type new contact</string>

    <!-- Text when no GPS coordinates are available -->
    <string name="no_coords">Location unavailable</string>

    <!-- Label for GPS coordinates -->
    <string name="gps_coords">Coords</string>

    <!-- Text displayed on button.Maximum 9 characters and MUST be wrapped by the button image (interjection). -->
    <string name="label_button">Help me!</string>

    <!-- Title displayed when the alert screen is shown -->
    <string name="title_activity_alert">ALERT</string>

    <!-- Title displayed when the contacts screen is shown -->
    <string name="title_activity_contacts">Contacts</string>

    <!-- String displayed when no contacts chosen -->
    <string name="no_contacts">No contacts</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>

    <!-- String displayed below each contact -->
    <string name="hold_to_remove">(hold to remove)</string>

    <!-- String displayed in toast shown when device does not support bluetooth -->
    <string name="no_bluetooth">No bluetooth</string>

    <!-- Strings displayed in dialog asking user to enable GPS -->
    <string name="enable_bluetooth_title">GPS settings</string>
    <string name="enable_bluetooth_text">GPS is not enabled. Do you want to go to settings menu? </string>

    <!-- Strings displayed as subtitle for bluetooth connection status -->
    <string name="title_connecting">Connecting</string>
    <string name="title_connected_to">Connected</string>
    <string name="title_not_connected">Not connected</string>
    <string name="not_requested_bluetooth"></string>

    <!-- Dialog showing when unable to connect -->
    <string name="title_dialog_unable_to_connect">Unable to connect device. Try again?</string>
    <string name="reject_dialog">No</string>
    <string name="accept_dialog">Yes</string>

    <!-- Dialog showing when bluetooth button pressed -->
    <string name="title_dialog_scan_again">Scan again for devices?</string>
    <string name="reject_scan_dialog">No, turn off</string>
    <string name="accept_scan_dialog">Yes</string>

    <!-- Strings in dialog when create new contact -->
    <string name="label_name">Name</string>
    <string name="label_phone_number">Phone number</string>
    <string name="positive_button">Done</string>
    <string name="negative_button">Cancel</string>

    <!-- String used in toasts to tell SMS sending status -->
    <string name="sms_sent">SMS sent</string>
    <string name="no_service">No service</string>
    <string name="generic_failure">Generic failure</string>
    <string name="null_pdu">Null PDU</string>
    <string name="radio_off">Radio off</string>

    <!-- Abreviations for latitude and longitude.Displayed on the top of the main screen -->
    <string name="latitude">Lat</string>
    <string name="longitude">Lng</string>

    <!-- String used in toast showed when bluetooth connection events are triggerd -->
    <string name="connection_lost">Device connection was lost</string>
    <string name="connected_to">Connected to</string>

    <!-- Strings in available devices screen -->
    <string name="scanning">Scanning</string>
    <string name="non_paired">Non paired</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No device</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>

    <!-- Option name in menu on settings screen -->
    <string name="action_explore">Explore</string>

    <!-- Words displayed in guide screen -->
    <string name="title_activity_guide">Guide</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- Tab title in guide screen -->
    <string name="tab_title_features">Features</string>
    <string name="tab_title_customize">Customize</string>
    <string name="tab_title_contact">Contact</string>

    <!-- Features tab content  -->
    <string name="features_title1">Long click and move</string>
    <string name="features_subtitle_title1">or simple click</string>

    <string name="features_connect_blue">Connect via bluetooth</string>
    <string name="features_settings">Settings</string>
    <string name="features_people">Choose persons</string>
    <string name="features_title2">Send SMS</string>
    <string name="features_sms_headphones">Use the headphones button to send messages</string>
    <string name="features_sms_button">Press the button to send messages</string>

    <!-- Customize tab content -->
    <string name="customize_title1">PERSONALIZE</string>
    <string name="customize_send_suggestions">Send your suggestions</string>
    <string name="customize_activate_media_btn">Activate the media button</string>
    <string name="customize_paid_version">Try the paid version of the app</string>
    <string name="customize_title2">IMPROVEMENT</string>
    <string name="customize_ringtone">Choose an alarm ringtone</string>
    <string name="customize_template">Create a message template</string>
    <string name="customize_signature">Sign all your messages</string>

    <!-- Contact us tab content, email address -->
    <string name="contact_us_email_address" translatable="false">mail@helpmeradar.com</string>

    <!-- Send alerts preferences -->
    <string name="pref_send_sms">Send SMS</string>
    <string name="pref_send_emails">Send emails</string>
    <string name="pref_bluetooth_messages">Send bluetooth notifications</string>
    <string name="pref_post_facebook">Post on Facebook</string>
    <string name="pref_post_twitter">Post on Twitter</string>
    <string name="pref_header_alerts">Alerts</string>

    <string name="text_btn_type_new_email">New email</string>


</resources>
