<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_title1"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/selectable_background"
                android:textSize="22sp"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="finish"/>
            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_signature"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_template"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_ringtone"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_title2"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="22sp"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_paid_version"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_activate_media_btn"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customize_send_suggestions"
                android:textSize="@dimen/medium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_background"
                android:clickable="true"
                android:onClick="goToContactTab"/>

            <TextView
                android:textSize="@dimen/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>