<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/features_title1"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/features_subtitle_title1"
            android:textSize="@dimen/medium_text"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <TextView
            android:text="@string/features_connect_blue"
            android:textSize="@dimen/medium_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <ImageView
           android:layout_gravity="center"
           android:scaleType="fitCenter"
           android:src="@drawable/bluet_move"
           android:layout_width="match_parent"
           android:layout_height="@dimen/btn_dimen" />

       <View
           android:background="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="1dp"/>

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <TextView
           android:text="@string/features_settings"
           android:textSize="@dimen/medium_text"
           android:textAllCaps="true"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <ImageView
           android:layout_gravity="center"
           android:scaleType="fitCenter"
           android:src="@drawable/sett_move"
           android:layout_width="match_parent"
           android:layout_height="@dimen/btn_dimen" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <TextView
           android:text="@string/features_people"
           android:textSize="@dimen/medium_text"
           android:textAllCaps="true"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <ImageView
           android:layout_gravity="center"
           android:scaleType="fitCenter"
           android:src="@drawable/peopl_move"
           android:layout_width="match_parent"
           android:layout_height="@dimen/btn_dimen" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <TextView
           android:text="@string/features_title2"
           android:textSize="@dimen/btn_text_size"
           android:textColor="@android:color/white"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <TextView
           android:text="@string/features_sms_button"
           android:textSize="@dimen/medium_text"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <ImageView
           android:layout_gravity="center"
           android:scaleType="centerCrop"
           android:src="@drawable/button"
           android:layout_width="72dp"
           android:layout_height="72dp" />

       <View
           android:layout_width="match_parent"
           android:layout_height="8dp"/>

       <TextView
           android:text="@string/features_sms_headphones"
           android:textSize="@dimen/medium_text"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <View
           android:layout_width="match_parent"
           android:layout_height="@dimen/activity_vertical_margin"/>
   </LinearLayout>
</ScrollView>